--- a/application-lifecycle/exercise-argocd/application-resources/templates/deployment.yaml
+++ b/application-lifecycle/exercise-argocd/application-resources/templates/deployment.yaml
@@ -17,7 +17,7 @@ spec:
     spec:
       containers:
         - name: apache
-          image: docker.io/bitnami/apache:2.4.46
+          image: registry.access.redhat.com/ubi9/httpd-24:1-273
           ports:
             - containerPort: 8080
               name: webserver
